# washer

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  main.py  pyproject.toml
washer/: api_requests.py  config.py  main.py
washer/models/: user.py
washer/ui_components/: account_edit_page.py  account_settings_page.py  add_car_prompt_page.py  admin_booking_page.py  admin_booking_process_page.py  admin_booking_table.py  admin_car_selection_page.py  admin_page.py  archived_schedule_page.py  booking_page.py  box_management_page.py  box_revenue_page.py  carwash_edit_page.py  clients_page.py  confirmation_page.py  my_bookings_page.py  my_cars_page.py  my_finance_page.py  pages.py  password_change_page.py  price_management_page.py  profile_page.py  schedule_management_page.py  select_car_page.py  sign_in_page.py  sign_up_page.py  wash_selection_page.py
