[tool.poetry]
name = "washer"
version = "0.1.0"
description = ""
authors = ["Maxcosanostra <155756786+Maxcosanostra@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flet = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
